[gd_scene load_steps=11 format=3 uid="uid://c8ublt73p1xgp"]

[ext_resource type="Script" path="res://weapons/weapons.gd" id="1_ctq7d"]
[ext_resource type="Texture2D" uid="uid://ctdy4xxbu24ky" path="res://resource/particles/shotLarge2.png" id="2_04goc"]
[ext_resource type="PackedScene" uid="uid://b4xwt3a4g1vck" path="res://weapons/bullet.tscn" id="2_aviwo"]
[ext_resource type="Texture2D" uid="uid://d0n4nfhv3kgyl" path="res://resource/top-down-shooter/PNG/weapon_gun.png" id="2_g33sr"]
[ext_resource type="AudioStream" uid="uid://bcwd2pn7hy7m3" path="res://resource/sounds/9mm-pistol.mp3" id="3_moo20"]

[sub_resource type="Animation" id="Animation_0870l"]
resource_name = "muzzle_flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.2, 0.3), Vector2(0.15, 0.7)]
}

[sub_resource type="Animation" id="Animation_71vts"]
resource_name = "reload"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gun:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -1.309, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_stop_reload"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u5et3"]
_data = {
"muzzle_flash": SubResource("Animation_0870l"),
"reload": SubResource("Animation_71vts")
}

[sub_resource type="Animation" id="Animation_cit8p"]
resource_name = "reload_enemy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gun:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -1.309, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_stop_reload_enemy"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jcppj"]
_data = {
"reload_enemy": SubResource("Animation_cit8p")
}

[node name="Weapons" type="Node2D"]
script = ExtResource("1_ctq7d")
bullet_scene = ExtResource("2_aviwo")
metadata/_edit_group_ = true

[node name="Gun" type="Sprite2D" parent="."]
position = Vector2(17, 10)
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_g33sr")

[node name="Flash" type="Sprite2D" parent="."]
position = Vector2(39, 10)
rotation = -1.5708
scale = Vector2(0.2, 0.3)
texture = ExtResource("2_04goc")

[node name="PlayerReload" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u5et3")
}

[node name="EnemyReload" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jcppj")
}

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(30, 9.33333)

[node name="PistolCooldown" type="Timer" parent="."]
wait_time = 0.82
one_shot = true

[node name="SMGCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ShotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_moo20")
volume_db = -24.0
bus = &"Sfx"
